--- a/config.yaml
+++ b/config.yaml
@@ -1,18 +1,18 @@
 apiEndpoints:
   - name: api
-    host: 'localhost'
-    paths: '/ip'
+    host: 'localhost:8082'
+    paths: '/v1/auth/signOn'
 
 serviceEndpoints:
-  - name: httpbin
-    uerl: 'https://httpbin.org'
+  - name: auth-service
+    url: 'http://localhost:3112'
 
 pipelines:
     - name: getting-started
       apiEndpoints:
         - api
       policies:
-        - proxy:
-            - action:
-                serviceEndpoint: httpbin
-                changeOrigin: true
+        - name: proxy
+          action:
+            serviceEndpoint: auth-service
+            changeOrigin: true
