--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "Launch",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
+            "mode": "debug",
             // "program": "${fileDirname}/main.go",
-            "program": "${workspaceFolder}/main.go",
+            "program": "${workspaceFolder}",
             "env": {},
             "args": []
         }
