hooks boilerplate (used for registering plugins)

--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,8 @@ pipelines:
       inboundEndpoints:
         - auth-inbound
       plugins:
+        - name: jwt
+          secret: c2VjcmV0
         - name: proxy
           action:
             outboundEndpoint: auth-service
